--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <h3>Gráfico de Estudiantes matriculados UASD</h3>
   <canvas id="grafico" ></canvas>
 <script src="script.js"></script>
+  <script src="data.json"></script>
 </body>
 </html>
